@@ -451,9 +451,15 @@ unreleased Version 0.3.34
   * linker error messages can now be decompressed and demangled (thanks to Benjamin Thaut for providing the code)
   * lexer now allows unicode characters from std.uni.isAlpha in identifiers
   * fix: when building phobos browse info the implicitely added JSON path was not saved to options
-  * completion from browse info: template arguments and contraint stripped from symbol now
   * fix calling cv2pdb for D1
   * goto definition: if ".." is used to reference the source file path, it could be opened twice in the editor
   * new item: package and module name now filled with some guess
-  * optlink now called directly with file monitoring: this allows passing library path directly (making the DMD_LIB 
+  * optlink now called directly with file monitoring: this allows passing the library path directly (making the DMD_LIB 
     patch in sc.ini redundant) and detecting library and source dependencies
+  * parser could not recover from error in module statement
+  * outlining: adding lines before collapsed region could unfold the regions
+  * fix: underlined syntax error could lag behind by a keystroke
+  * tweak completion box:
+    - from browse info: template arguments and contraint stripped from symbol now
+    - avoid delayed opening of completion box when typing non-identifier characters
+    - completion box now closed for a lot of navigation and editing commands
